RESOLVED FIXED302139
WTFMove() is not supposed to compile when a `const` variable is passed in
https://bugs.webkit.org/show_bug.cgi?id=302139
Summary WTFMove() is not supposed to compile when a `const` variable is passed in
Chris Dumez
Reported 2025-11-06 20:04:02 PST
WTFMove() is not supposed to compile when a `const` variable is passed in, it the main reason we use `WTFMove()` over `std::move()`. However, this is currently not working as intended and it is compiling just fine. This can lead to bugs such as Bug 301998.
Attachments
Chris Dumez
Comment 1 2025-11-06 22:37:07 PST
I am actively working on this and I have a local fix.
Chris Dumez
Comment 2 2025-11-07 00:44:37 PST
Radar WebKit Bug Importer
Comment 3 2025-11-13 20:04:11 PST
EWS
Comment 4 2025-12-18 15:28:00 PST
Committed 304711@main (021be8e5aefd): <https://commits.webkit.org/304711@main> Reviewed commits have been landed. Closing PR #53579 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.